add a little style

--- a/src/App.css
+++ b/src/App.css
@@ -40,14 +40,13 @@
 .app-wrapper {
     margin: 0 auto;
     display: grid;
-    width: 1200px;
+    width: 100%;
     grid-template-areas: "h h" "n c";
-
     grid-template-rows: 100px 1fr;
     grid-template-columns: 2fr 10fr;
 }
 
 .app-wrapper-content {
   grid-area: c;
-  background: cornflowerblue;
+  background: #3b4f68;
 }
